// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-MinusCircleLightIcon"
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-clickable"
  isClickable={true}
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-disabled lucid-MinusCircleLightIcon-is-clickable"
  isClickable={true}
  isDisabled={true}
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-active"
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-clickable lucid-MinusCircleLightIcon-is-active"
  isClickable={true}
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;

exports[`MinusCircleLightIcon [common] example testing should match snapshot(s) for 1.default 6`] = `
<Icon
  className="lucid-MinusCircleLightIcon lucid-MinusCircleLightIcon-is-disabled lucid-MinusCircleLightIcon-is-clickable lucid-MinusCircleLightIcon-is-active"
  isClickable={true}
  isDisabled={true}
>
  <circle
    className="lucid-MinusCircleLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-MinusCircleLightIcon-dash"
    d="M4.5 8h7"
  />
</Icon>
`;
